--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "framer-motion": "^10.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
+    "react-preloaders": "^3.0.3",
     "react-scripts": "^5.0.1",
     "tailwindcss-font-inter": "^3.0.1",
     "web-vitals": "^2.1.4"
