--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-intersection-observer": "^9.4.3",
     "react-preloaders": "^3.0.3",
     "react-scripts": "^5.0.1",
+    "react-scrollbars-custom": "^4.1.1",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss-font-inter": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
