--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "ayege",
   "version": "0.1.0",
-  "homepage": "https://ayege.github.io/personal-porfolio",
+  "homepage": "http://ayege.frikiao.com",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@react-hook/media-query": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "framer-motion": "^10.9.2",
-    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
@@ -20,8 +19,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
